--- a/_includes/themes/effector-wide/default.html
+++ b/_includes/themes/effector-wide/default.html
@@ -12,7 +12,7 @@
 <body onload="prettyPrint()">
 
   <div class="container">
-      <h1 class="sitename">Tao</h1>
+      <h1 class="sitename">Liang</h1>
       <div class="nav">
 <a href="/">主页</a>
 <a href="/archive/">存档</a>
@@ -22,7 +22,7 @@
 </div>
 {{ content }}
 <footer>
-  <p><small><a href="https://github.com/pala/pala.github.com">Designed</a> by <a href="http://ztpala.com">Tao Zhang</a> | Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>, <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> and <a href="http://pages.github.com/">GitHub Pages</a> | 版权声明：<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/cn/">CC BY-NC-SA 3.0</a> | <span class="label label-success">{{site.time | date:"%Y-%m-%d"}}</span></small></p>
+  <p><small><a href="https://github.com/pala/pala.github.com">Designed</a> by <a href="http://ztpala.com">Liang Shilei</a> | Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>, <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> and <a href="http://pages.github.com/">GitHub Pages</a> | 版权声明：<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/cn/">CC BY-NC-SA 3.0</a> | <span class="label label-success">{{site.time | date:"%Y-%m-%d"}}</span></small></p>
   <!-- inspired by http://effectortheme.tumblr.com/ -->
 </footer>
 </div>
