--- a/_includes/themes/effector-wide/default.html
+++ b/_includes/themes/effector-wide/default.html
@@ -18,11 +18,11 @@
 <a href="/archive/">存档</a>
 <a href="/links">链接</a>
 <a href="/search">搜索</a>
-<a href="/apps">游戏</a>
+<a href="/apps">关于我</a>
 </div>
 {{ content }}
 <footer>
-  <p><small><a href="https://github.com/pala/pala.github.com">Designed</a> by <a href="http://ztpala.com">Liang Shilei</a> | Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>, <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> and <a href="http://pages.github.com/">GitHub Pages</a> | 版权声明：<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/cn/">CC BY-NC-SA 3.0</a> | <span class="label label-success">{{site.time | date:"%Y-%m-%d"}}</span></small></p>
+  <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://pages.github.com/">GitHub Pages</a> | Author:<a href="http://liangshilei.com">Liang Shilei</a> | <span class="label label-success">{{site.time | date:"%Y-%m-%d"}}</span></small></p>
   <!-- inspired by http://effectortheme.tumblr.com/ -->
 </footer>
 </div>
