--- a/_includes/themes/effector-wide/default.html
+++ b/_includes/themes/effector-wide/default.html
@@ -18,7 +18,7 @@
 <a href="/archive/">存档</a>
 <a href="/links">链接</a>
 <a href="/search">搜索</a>
-<a href="/apps">关于我</a>
+<a href="{{site.url}}/about/">关于我</a>
 </div>
 {{ content }}
 <footer>
